[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zero_levels"
version = "0.1.0"
description = "Tools to estimate and remove monopole and dipole zero levels in HEALPix maps."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.23",
  "healpy>=1.16",
  "pandas>=2.0",
]

[project.optional-dependencies]
test = [
  "matplotlib>=3.7",
  "pytest>=7.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
